# watery-wails

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  biggie-todo.md  build.sh  clean.sh  imgui.ini  rebuild.cfg  release.cfg  rust-toolchain.toml  ssbs.cfg
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml  test_version_cache.yaml
.kanbn_boards/watery-wails-kanban/.kanbn/: index.md
.kanbn_boards/watery-wails-kanban/.kanbn/tasks/: rewrite-next-goal-evaluation-to-support-more-contextual-decisions-for-different-goals.md  rewrite-predicates-to-support-dynamic-comparisons.md  support-mid-execution-reevaluation.md
assets/: Sandwich Character.glb  cameras_testing.glb
assets-dev/: cameras_testing.blend  cameras_testing.blend1  facility.blend  facility.blend1  sandwich_goober.blend  sandwich_goober.blend1
bevy_htnp/: Cargo.toml
bevy_htnp/examples/: basic_htnp.rs
bevy_htnp/src/: data.rs  default_tasks.rs  execution.rs  lib.rs  state.rs  tasks.rs
bevy_htnp/src/planning/: goals.rs  mod.rs  plan_data.rs  tree.rs
include/: stb_image.h  stb_vorbis.h
include/audio_file/: AudioFile.h
include/toml11/: toml.hpp
res/: actions.toml
res/model/internal/: simple_cube.gltf
res/shader/: default.frag  default.vert  structs.shaderinclude  unlit.frag  unlit.vert
res/shader/conversion/: rect2cube.frag  rect2cube.vert
res/shader/includes/: blinn-phong.shader  fragment_prefix.shader  lights.shader  pbr_lighting.shader  vertex_prefix.shader
res/shader/includes/components/: light_structs.shader
res/shader/skybox/: skybox.frag  skybox.vert
res/testing/meshes/: test_scene.gltf
res/testing/meshes/my_export/gltf/: test_survival_backpack.gltf
res/testing/meshes/poly_haven_hatchet/: hatchet_1k.gltf
res/testing/meshes/test_scene_data/: scene_data.gltf
src/: main.cpp  main.rs
src/engine/: engine.cpp  engine.hpp
src/engine/audio_system/: audio.cpp  audio.hpp
src/engine/data_types/: tree.hpp
src/engine/game_object/: game_object.cpp  game_object.hpp
src/engine/input_system/: input_map_conversion.cpp  input_map_conversion.hpp  inputs.cpp  inputs.hpp
src/engine/math/: math.cpp  math.hpp
src/engine/render_system/: render.cpp  render.hpp  renderable.hpp
src/engine/render_system/camera/: camera.cpp  camera.hpp
src/engine/render_system/lights/: lights.hpp
src/engine/render_system/material/: material.cpp  material.hpp
src/engine/render_system/mesh/: mesh.cpp  mesh.hpp  primitives.cpp  primitives.hpp
src/engine/render_system/resource_management/: resource_factory.cpp  resource_factory.hpp
src/engine/render_system/shaders/: program.cpp  program.hpp
src/engine/render_system/sky/: skybox.cpp  skybox.hpp
src/engine/render_system/texture/: cubemap.cpp  cubemap.hpp  texture.cpp  texture.hpp  texture_hdri.cpp  texture_hdri.hpp
src/engine/safety/: safety.hpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/window/: window.cpp  window.hpp
src/game/: mod.rs  opening_scene.cpp  opening_scene.hpp
src/game/gameplay/: debug.rs  mod.rs  player.rs
src/game_object/: game_object.cpp  game_object.hpp
src/glad/: glad.c  glad.h
src/material/: material.cpp  material.hpp
src/mesh/: mesh.cpp  mesh.hpp
src/render/: render.cpp  render.hpp
src/shaders/: program.cpp  program.hpp
src/texture/: texture.cpp  texture.hpp
src/window/: window.cpp  window.hpp
temp/: CMakeCache.txt  Makefile  cmake_install.cmake
