[workspace]
resolver = "2"
members = ["bevy_htnp"]

[package]
name = "watery-wails"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14" }
bevy_htnp = { path = "bevy_htnp" }
bevy_tweening = "0.11.0"
leafwing-input-manager = { version = "0.15.0", features = ["egui"] }
bevy-steamworks = { path = "bevy_steamworks", optional = true }
bevy-inspector-egui = { version = "0.25.2", features = ["bevy_pbr"] }
bevy_mod_picking = { version = "0.20.1", features = ["backend_avian"] }
oxidized_navigation = { version = "0.11.0", default-features = false, features = [
    "parry_015",
    "debug_draw",
] }
avian3d = "0.1.2"

[features]
default = [
    "full-game",
    # should include steam but doesn't work well with my debugging configs
]
steam = ["dep:bevy-steamworks"]
full-game = [] # as opposed to demo

#
#   Performance/Optimizations
#


[profile.dev]
# debug = 1
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"
